my-node-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  namespace: default
spec:
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
